--- a/app/public/home.html
+++ b/app/public/home.html
@@ -15,7 +15,32 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="jumbotron" id="tagline">
+            <h1 class="text-center">Fellowship Finder</h1>
+            <h3 class="text-center">Well met, Traveler!</h3>
+            <h6 class="text-center">Are you seeking adventure but don't know where to start? On a quest to defeat the Dark Lord, but don't have a
+                party? Need to save a prince and/or princess? Then look no further, for you have stumbled upon just the sort
+                of magic you need to create the perfect party for your quest!</h6>
+        </div>
+        <hr/>
+        <h5 class="text-center">Simply fill out a short survey to discover the party member(s) of your dreams</h5>
+        <br>
+        <div class="text-center">
+            <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h5><i class="fas fa-magic"></i> Taketh the Survey</h5></button></a>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <footer class="footer">
+        <div class="container">
+            <p>
+                <a href="#">API Adventurers List</a> |
+                <a href="#">GitHub Repo</a>
+            </p>
+        </div>
+    </footer>
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
