--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -13,26 +13,30 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
         crossorigin="anonymous">
     <!-- Chosen -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.5/chosen.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.5/chosen.jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.5/chosen.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.5/chosen.jquery.min.js"></script> -->
 </head>
 
 <body>
     <div class="container">
-       <h2>Survey Queries</h2>
-       <hr>
-       <h3><strong>About You</strong></h3>
-       <h4>Name (required)</h4>
-       <input type="text" name="" id="user-name" class="form-control" required>
+        <h2>Survey Queries</h2>
+        <hr>
+        <h3>
+            <strong>About You</strong>
+        </h3>
+        <h4>Name (required)</h4>
+        <input type="text" name="" id="user-name" class="form-control" required>
 
-       <h4>Link to Personal Portrait (required)</h4>
-       <input type="text" name="" id="user-pic" class="form-control" required>
+        <h4>Link to Personal Portrait (required)</h4>
+        <input type="text" name="" id="user-pic" class="form-control" required>
 
-       <hr>
+        <hr>
 
-       <h3><strong>Query 1</strong></h3>
-       <h4>You would prefer to spend the day tending your garden or fishing in the local stream than questing for gold and
-        glory.</h4>
+        <h3>
+            <strong>Query 1</strong>
+        </h3>
+        <h4>You would prefer to spend the day tending your garden or fishing in the local stream than questing for gold and glory.
+        </h4>
         <select data-placeholder="" class="chosen-select" id="q1">
             <option value=""></option>
             <option value="1">1 - Strongly Disagree</option>
@@ -41,99 +45,118 @@
             <option value="4">4 - Somewhat Agree</option>
             <option value="5">5 - Strongly Agree</option>
         </select>
-        <h3><strong>Query 2</strong></h3>
+        <h3>
+            <strong>Query 2</strong>
+        </h3>
         <h4>The more treacherous the quest, the better!</h4>
-         <select data-placeholder="" class="chosen-select" id="q2">
-             <option value=""></option>
-             <option value="1">1 - Strongly Disagree</option>
-             <option value="2">2 - Somewhat Disagree</option>
-             <option value="3">3 - It matters not to me</option>
-             <option value="4">4 - Somewhat Agree</option>
-             <option value="5">5 - Strongly Agree</option>
-         </select>
-         <h3><strong>Query 3</strong></h3>
-         <h4>The love of a fair one is a far better prize than gold.</h4>
-          <select data-placeholder="" class="chosen-select" id="q3">
-              <option value=""></option>
-              <option value="1">1 - Strongly Disagree</option>
-              <option value="2">2 - Somewhat Disagree</option>
-              <option value="3">3 - It matters not to me</option>
-              <option value="4">4 - Somewhat Agree</option>
-              <option value="5">5 - Strongly Agree</option>
-          </select>
-          <h3><strong>Query 4</strong></h3>
-          <h4>You find creepy, crawly creatures to be far worse than huge monsters.</h4>
-           <select data-placeholder="" class="chosen-select" id="q4">
-               <option value=""></option>
-               <option value="1">1 - Strongly Disagree</option>
-               <option value="2">2 - Somewhat Disagree</option>
-               <option value="3">3 - It matters not to me</option>
-               <option value="4">4 - Somewhat Agree</option>
-               <option value="5">5 - Strongly Agree</option>
-           </select>
-           <h3><strong>Query 5</strong></h3>
-           <h4>A hearty meal and a good night's rest is better than any healing spell.</h4>
-            <select data-placeholder="" class="chosen-select" id="q5">
-                <option value=""></option>
-                <option value="1">1 - Strongly Disagree</option>
-                <option value="2">2 - Somewhat Disagree</option>
-                <option value="3">3 - It matters not to me</option>
-                <option value="4">4 - Somewhat Agree</option>
-                <option value="5">5 - Strongly Agree</option>
-            </select>
-            <h3><strong>Query 6</strong></h3>
-            <h4>It is more important to work for the greater good than to save the life of one dear friend.</h4>
-             <select data-placeholder="" class="chosen-select" id="q6">
-                 <option value=""></option>
-                 <option value="1">1 - Strongly Disagree</option>
-                 <option value="2">2 - Somewhat Disagree</option>
-                 <option value="3">3 - It matters not to me</option>
-                 <option value="4">4 - Somewhat Agree</option>
-                 <option value="5">5 - Strongly Agree</option>
-             </select>
-             <h3><strong>Query 7</strong></h3>
-             <h4>You prefer to stick to the shadows, without making your presence known.</h4>
-              <select data-placeholder="" class="chosen-select" id="q7">
-                  <option value=""></option>
-                  <option value="1">1 - Strongly Disagree</option>
-                  <option value="2">2 - Somewhat Disagree</option>
-                  <option value="3">3 - It matters not to me</option>
-                  <option value="4">4 - Somewhat Agree</option>
-                  <option value="5">5 - Strongly Agree</option>
-              </select>
-              <h3><strong>Query 8</strong></h3>
-              <h4>You prefer the bustling action of a capital city to the peace and quiet of the forest.</h4>
-               <select data-placeholder="" class="chosen-select" id="q8">
-                   <option value=""></option>
-                   <option value="1">1 - Strongly Disagree</option>
-                   <option value="2">2 - Somewhat Disagree</option>
-                   <option value="3">3 - It matters not to me</option>
-                   <option value="4">4 - Somewhat Agree</option>
-                   <option value="5">5 - Strongly Agree</option>
-               </select>
-               <h3><strong>Query 9</strong></h3>
-               <h4>You prefer to use the mystical powers of the mind over brute strength.</h4>
-                <select data-placeholder="" class="chosen-select" id="q9">
-                    <option value=""></option>
-                    <option value="1">1 - Strongly Disagree</option>
-                    <option value="2">2 - Somewhat Disagree</option>
-                    <option value="3">3 - It matters not to me</option>
-                    <option value="4">4 - Somewhat Agree</option>
-                    <option value="5">5 - Strongly Agree</option>
-                </select>
-                <h3><strong>Query 10</strong></h3>
-                <h4>There is nothing more powerful than friendship!</h4>
-                 <select data-placeholder="" class="chosen-select" id="q10">
-                     <option value=""></option>
-                     <option value="1">1 - Strongly Disagree</option>
-                     <option value="2">2 - Somewhat Disagree</option>
-                     <option value="3">3 - It matters not to me</option>
-                     <option value="4">4 - Somewhat Agree</option>
-                     <option value="5">5 - Strongly Agree</option>
-                 </select>
+        <select data-placeholder="" class="chosen-select" id="q2">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 3</strong>
+        </h3>
+        <h4>The love of a fair one is a far better prize than gold.</h4>
+        <select data-placeholder="" class="chosen-select" id="q3">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 4</strong>
+        </h3>
+        <h4>You find creepy, crawly creatures to be far worse than huge monsters.</h4>
+        <select data-placeholder="" class="chosen-select" id="q4">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 5</strong>
+        </h3>
+        <h4>A hearty meal and a good night's rest is better than any healing spell.</h4>
+        <select data-placeholder="" class="chosen-select" id="q5">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 6</strong>
+        </h3>
+        <h4>It is more important to work for the greater good than to save the life of one dear friend.</h4>
+        <select data-placeholder="" class="chosen-select" id="q6">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 7</strong>
+        </h3>
+        <h4>You prefer to stick to the shadows, without making your presence known.</h4>
+        <select data-placeholder="" class="chosen-select" id="q7">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 8</strong>
+        </h3>
+        <h4>You prefer the bustling action of a capital city to the peace and quiet of the forest.</h4>
+        <select data-placeholder="" class="chosen-select" id="q8">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 9</strong>
+        </h3>
+        <h4>You prefer to use the mystical powers of the mind over brute strength.</h4>
+        <select data-placeholder="" class="chosen-select" id="q9">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
+        <h3>
+            <strong>Query 10</strong>
+        </h3>
+        <h4>There is nothing more powerful than friendship!</h4>
+        <select data-placeholder="" class="chosen-select" id="q10">
+            <option value=""></option>
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Somewhat Disagree</option>
+            <option value="3">3 - It matters not to me</option>
+            <option value="4">4 - Somewhat Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+        </select>
         <br>
         <br>
-        <button type="submit" class="btn btn-primary btn-lg" id="submit"><i class="fas fa-magic"></i> Submit</button>
+        <button type="submit" class="btn btn-primary btn-lg" id="submit">
+            <i class="fas fa-magic"></i> Submit</button>
         <br>
         <br>
         <br>
@@ -148,14 +171,78 @@
         </div>
     </footer>
 
-
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        // Chosen CSS
+        // var config = {
+        //     ".chosen-select": {},
+        //     ".chosen-select-deselect": { allow_single_deselect: true },
+        //     ".chosen-select-no-single": { disable_search_threshold: 10 },
+        //     ".chosen-select-no-results": { no_results_text: "Oops, there's nothing here!" },
+        //     ".chosen-select-width": { width: "95%" }
+        // };
+
+        // for (var selector in config) {
+        //     $(selector).chosen(config[selector]);
+        // }
+
+        // Grab user input data
+        $("#submit").on("click", function () {
+            event.preventDefault();
+            // Form validation
+            function validateForm() {
+                var isValid = true;
+                $(".form-control").each(function () {
+                    if ($(this).val() === "") {
+                        isValid = false;
+                    }
+                });
+
+                $(".chosen-select").each(function () {
+                    if ($(this).val() === "") {
+                        isValid = false;
+                    }
+                });
+                return isValid;
+            }
+
+            // If all required fields are filled out
+            if (validateForm()) {
+                // Create an object to store user's data
+                var userData = {
+                    name: $("#user-name").val(),
+                    photo: $("#user-pic").val(),
+                    scores: [
+                        $("#q1").val(),
+                        $("#q2").val(),
+                        $("#q3").val(),
+                        $("#q4").val(),
+                        $("#q5").val(),
+                        $("#q6").val(),
+                        $("#q7").val(),
+                        $("#q8").val(),
+                        $("#q9").val(),
+                        $("#q10").val()
+                    ]
+                };
+
+                // Grab the URL of the website
+                var currentURL = window.location.origin;
+
+                // POST the new data to the adventurers API
+                $.post(currentURL + "/api/adventurers", userData, function (data) {
+                    alert("working");
+                });
+            }
+
+        });
+    </script>
+
 </body>
 
 </html>
