--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,9 +12,6 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
         crossorigin="anonymous">
-    <!-- Chosen -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.5/chosen.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.5/chosen.jquery.min.js"></script> -->
 </head>
 
 <body>
@@ -198,19 +195,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script type="text/javascript">
-        // Chosen CSS
-        // var config = {
-        //     ".chosen-select": {},
-        //     ".chosen-select-deselect": { allow_single_deselect: true },
-        //     ".chosen-select-no-single": { disable_search_threshold: 10 },
-        //     ".chosen-select-no-results": { no_results_text: "Oops, there's nothing here!" },
-        //     ".chosen-select-width": { width: "95%" }
-        // };
-
-        // for (var selector in config) {
-        //     $(selector).chosen(config[selector]);
-        // }
-
         // Grab user input data
         $("#submit").on("click", function () {
             event.preventDefault();
@@ -257,8 +241,8 @@
                 // POST the new data to the adventurers API
                 $.post(currentURL + "/api/adventurers", userData, function (data) {
                     // // Grab the result from the POST to display bestMatch name and photo
-                    // $("#matchName").text(data.name);
-                    // $("#matchImg").attr("src", data.photo);
+                    $("#matchName").text(data.name);
+                    $("#matchPhoto").attr("src", data.photo);
                     // Display modal
                     $("#resultsModal").modal("toggle");
                 });
