--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -161,7 +161,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p>
+                        <p>
                     <a href="#">API Adventurers List</a> |
                     <a href="#">GitHub Repo</a>
                 </p>
@@ -179,7 +179,7 @@
             </div>
             <div class="modal-body">
               <h2 id="matchName"></h2>
-              <img id="matchPhoto" src="https://pastorboller.files.wordpress.com/2015/06/23-3.jpg" style="width:100%" alt="">
+              <img id="matchPhoto" src="" style="width:100%" alt="">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Happy Questing!</button>
