Add API and github repo links to footer

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -36,8 +36,8 @@
     <footer class="footer">
         <div class="container">
             <p>
-                <a href="#">API Adventurers List</a> |
-                <a href="#">GitHub Repo</a>
+                <a href="/api/adventurers">API Adventurers List</a> |
+                <a href="https://github.com/HillaryBLavin/fellowship-finder">GitHub Repo</a>
             </p>
         </div>
     </footer>
