Remove Jumbotron, add logo

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,8 +16,8 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron" id="tagline">
-            <h1 class="text-center">Fellowship Finder</h1>
+        <div class="container">
+            <img src="images/FFlogo-transparent.png" height="200" class="img-fluid">
             <h3 class="text-center">Well met, Traveler!</h3>
             <h6 class="text-center">Are you seeking adventure but don't know where to start? On a quest to defeat the Dark Lord, but don't have a
                 party? Need to save a prince and/or princess? Then look no further, for you have stumbled upon just the sort
@@ -37,7 +37,8 @@
         <div class="container">
             <p>
                 <a href="/api/adventurers">API Adventurers List</a> |
-                <a href="https://github.com/HillaryBLavin/fellowship-finder">GitHub Repo</a>
+                <a href="https://github.com/HillaryBLavin/fellowship-finder">GitHub Repo</a> |
+                <a href="https://www.freepik.com/free-vector/hand-drawn-map-compass-background_1582127.htm">Compass Logo designed by Freepik</a>
             </p>
         </div>
     </footer>
